--- a/src/translations/en/editor.json
+++ b/src/translations/en/editor.json
@@ -1,7 +1,7 @@
 {
     "panels": {
         "panelsList": {
-            "templates": "Mẫu thiết kế",
+            "templates": "Background",
             "customize": "Chỉnh sửa",
             "elements": "Hình dạng",
             "images": "Ảnh có sẵn",
