--- a/src/translations/es/editor.json
+++ b/src/translations/es/editor.json
@@ -1,6 +1,7 @@
 {
     "panels": {
         "panelsList": {
+            "layers": "Capas",
             "templates": "Plantillas",
             "customize": "Personalizar",
             "elements": "Elementos",
@@ -9,8 +10,7 @@
             "uploads": "Cargas",
             "text": "Texto",
             "graphics": "Graficos",
-            "pixabay": "Pixabay",
-            "layers": "Capas"
+            "pixabay": "Pixabay"
         }
     }
 }
