--- a/src/translations/es/editor.json
+++ b/src/translations/es/editor.json
@@ -1,16 +1,17 @@
 {
-    "panels": {
-        "panelsList": {
-            "layers": "Capas",
-            "templates": "Plantillas",
-            "customize": "Personalizar",
-            "elements": "Elementos",
-            "images": "Imagenes",
-            "videos": "Videos",
-            "uploads": "Cargas",
-            "text": "Texto",
-            "graphics": "Graficos",
-            "pixabay": "Pixabay"
-        }
+  "panels": {
+    "panelsList": {
+      "layers": "Capas",
+      "templates": "Plantillas",
+      "customize": "Personalizar",
+      "elements": "Elementos",
+      "images": "Imagenes",
+      "videos": "Videos",
+      "uploads": "Cargas",
+      "text": "Texto",
+      "graphics": "Graficos",
+      "pixabay": "Pixabay",
+      "component": "Thành phần"
     }
+  }
 }
