--- a/src/translations/en/editor.json
+++ b/src/translations/en/editor.json
@@ -7,11 +7,12 @@
             "elements": "Hình dạng",
             "images": "Ảnh có sẵn",
             "videos": "Videos",
-            "uploads": "Đẩy ảnh lên",
+            "uploads": "Mẫu in",
             "text": "Kiểu chữ",
             "graphics": "Thành phần",
             "pixabay": "Pixabay",
-            "component": "Thành phần"
+            "component": "Thành phần",
+            "PrintedForm": "Mẫu in"
         }
     }
 }
